--- a/CT188_Nhap mon lap trinh Web/web_form/style.css
+++ b/CT188_Nhap mon lap trinh Web/web_form/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: myFirstFont;
-    src: url(/font/MTD\ VVD\ Golden\ Horn\ Pressed.otf);
+    src: url(./font/MTD\ VVD\ Golden\ Horn\ Pressed.otf);
 
 }
 body{
