--- a/CT188_Nhap mon lap trinh Web/pomodorWeb/styles.css
+++ b/CT188_Nhap mon lap trinh Web/pomodorWeb/styles.css
@@ -33,12 +33,52 @@ body{
     font-size: 17px;
     border-radius: 5px;
     border: none;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
-.btn:focus{
-    background-color: brown;
+.btn:active{
+    background-color: rgb(64, 116, 139);
 }
 
 iframe{
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    border-radius: 10px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+#audioPlayer{
+    display: none;
+}
+.sliderVolume {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 15px;
+    border-radius: 5px;  
+    background: #99a2ad;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.sliderVolume::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+     background: rgb(250, 250, 250);
+    cursor: pointer;
+}
+
+#audio{
+    line-height: 25px;
+}
+
+#audioVolume{
+    width: 350px;
+}
+
+#labelVolume{
+    font-size: 25px;
+    color: #e4e4f7;
 }
