--- a/CT188_Nhap mon lap trinh Web/pomodorWeb/styles.css
+++ b/CT188_Nhap mon lap trinh Web/pomodorWeb/styles.css
@@ -1,14 +1,17 @@
+
 body{
-    background-image: url(https://images.unsplash.com/photo-1618824834718-92f8469a4dd1?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1170&q=80);
+    background-image: url(img/bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    margin-top: 80px;
     font-size: 40px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+#main{
+    margin-top: 80px;
     display: flex;
     justify-content: space-around;
 }
-
 #pomodoro{
     display: flex;
     flex-direction: column;
@@ -21,15 +24,17 @@ body{
     color: rgb(228, 228, 247);
 }
 
-#btn{
+#btnTime{
     display: flex;
     justify-content:space-evenly;
 }
 
 .btn{
+    margin-left: 2%;
     width: 70px;
     height: 30px;
-    color: rgb(70, 86, 102);
+    color: rgb(122, 150, 179);
+    font-weight: bolder;
     font-size: 17px;
     border-radius: 5px;
     border: none;
@@ -66,7 +71,7 @@ iframe{
     width: 25px;
     height: 25px;
     border-radius: 50%;
-     background: rgb(250, 250, 250);
+     background: #e4e4f7;
     cursor: pointer;
 }
 
@@ -79,6 +84,18 @@ iframe{
 }
 
 #labelVolume{
+    font-weight: bold;
     font-size: 25px;
     color: #e4e4f7;
+}
+
+#today{
+    margin-top: 30px;
+    margin-left: 50px;
+    margin-right: 50px;
+    display: flex;
+    justify-content: center;
+    color: rgb(250, 220, 183);
+    background-color: #abb5c2;
+    border-radius: 5px;
 }
