--- a/CT188_Nhap mon lap trinh Web/pomodorWeb/styles.css
+++ b/CT188_Nhap mon lap trinh Web/pomodorWeb/styles.css
@@ -102,20 +102,22 @@ iframe{
 
 #cam{
     margin: 10px auto;
-    width: 280px;
-    height: 210px;
-    border: 10px rgb(209, 232, 240) solid;
-    border-radius: 3px;
     position:absolute;
     margin-top: 300px;
     margin-right: 300px;
+    height: 0;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+    transition: opacity 0.3s ease-out;
+    overflow:hidden;
 }
 
 #video{
+    border: 10px rgb(209, 232, 240) solid;
+    border-radius: 3px;
     width: 280px;
     height: 210px;
-    background-color: #666;
+    background-color: rgb(209, 232, 240) solid;
+    transition: opacity 0.3s ease-in;
 }
 
 .btnCamera{
@@ -127,3 +129,4 @@ iframe{
 .cam{
     width: 80px;
 }
+
